<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global Strings -->

    <string name="app_name">Triton Unlinked</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <!-- Main Activity Strings -->

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section4">Section 4</string>
    <string name="title_section5">Section 5</string>
    <string name="title_section6">Section 6</string>
    <string name="title_section7">Section 7</string>
    <string name="professor_page_button">Professor Page</string>
    <string name="course_page_button">Course Page</string>
    <string name="room_page_button">Room Page</string>
    <string name="search_by_header">Search By</string>

    <!-- Course Profile Activity Strings -->

    <string name="title_activity_course_profile">CourseProfileActivity</string>
    <string name="course_name">Course Name</string>
    <string name="course_num">Course Number</string>
    <string name="course_sub">Course Subject</string>
    <string name="course_desc">Description: This is a description for a course. It could be any course. Even underwater basket weaving. The important thing to remember is that this space is for describing a course. It shouldnt change even if the area below displays a section from a different page.</string>
    <string name="course_section">Section </string>
    <string name="course_section_type">Type: Lecture</string>
    <string name="course_section_prof">Professor: James Bond</string>
    <string name="course_section_time">Time: Tues/Thurs from 3:00-4:20</string>
    <string name="course_section_loc">Location: Room 420</string>

    <!-- Professor Profile Activity Strings -->

    <string name="title_activity_professor_profile">ProfessorProfileActivity</string>
    <string name="professor_classlist">A list of classes retrieved form the JSON that represents classes currently taught by the professor.  Should link to corresponding course page?</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="ratemyprof_comment">Rate My Professor Comments</string>

    <!-- Room Activity Strings -->

    <string name="title_activity_room">RoomActivity</string>
    <string name="lecture_hall">Galbraith Hall</string>
    <string name="room_number">Room 242</string>
    <string name="day_of_week">Day of Week</string>
    <string name="sample_course1">Sample Course 1</string>
    <string name="course1_type">Lecture</string>
    <string name="course1_start">Start: 12:00 PM</string>
    <string name="course1_end">End: 12:50 PM</string>
    <string name="sample_course2">Sample Course 2</string>
    <string name="course2_type">Lecture</string>
    <string name="course2_start">Start: 2:00 PM</string>
    <string name="course2_end">End: 2:50 PM</string>

    <string-array name="times">
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>4:00</item>
        <item>5:00</item>
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string name="title_activity_browse">BrowseActivity</string>

</resources>
